# simple-autopilot

./: .dockerignore  .gitignore  BUGFIX_DEADLOCK.md  Dockerfile  Dockerfile.dev  README.md  autopilot  build_all.sh  build_docker.sh  docker-compose.yml  run_all.sh  run_headless.sh  stop_all.sh
assets/: test_image.ppm
common_msgs/: CMakeLists.txt  simple_image.hpp
common_msgs/proto/: daemon.proto  map_data.proto  sensor_data.proto  system_status.proto  visualizer_data.proto
config/: control.json  planning.json  sensor.json
install/include/common_msgs/: visualizer_data.pb.h
install/include/simple_middleware/: data_publisher.hpp  logger.hpp  test_subscriber.hpp
install/lib/: libcommon_msgs_lib.dylib  libsimple_middleware_lib.dylib
scripts/: clean.sh  install_protobuf.sh
simple_control/: CMakeLists.txt
simple_control/src/: control_component.cpp  control_component.hpp  main.cpp
simple_daemon/: CMakeLists.txt
simple_daemon/src/: daemon_server.cpp  daemon_server.hpp  main.cpp
simple_map/: CMakeLists.txt
simple_map/src/: main.cpp  map_component.cpp  map_component.hpp
simple_middleware/: CMakeLists.txt  README.md  config_manager.cpp  config_manager.hpp  data_publisher.cpp  logger.cpp  logger.hpp  monitor.cpp  pub_sub_middleware.cpp  pub_sub_middleware.hpp  status_reporter.cpp  status_reporter.hpp  test_main.cpp  test_subscriber.cpp
simple_perception/: CMakeLists.txt
simple_perception/src/: main.cpp  perception_component.cpp  perception_component.hpp
simple_planning/: CMakeLists.txt
simple_planning/src/: main.cpp  planning_component.cpp  planning_component.hpp
simple_prediction/: CMakeLists.txt
simple_prediction/src/: main.cpp  prediction_component.cpp  prediction_component.hpp
simple_sensor/: CMakeLists.txt
simple_sensor/src/: main.cpp  sensor_component.cpp  sensor_component.hpp
simple_simulator/: CMakeLists.txt  README.md
simple_simulator/src/: main.cpp  simulator_core.cpp  simulator_core.hpp
simple_visualizer/: CMakeLists.txt
simple_visualizer/src/: main.cpp
simple_visualizer/src/common/: thread_safe_queue.hpp
simple_visualizer/src/component/: visualizer_component.cpp  visualizer_component.hpp
simple_visualizer/src/handler/: websocket_handler.cpp  websocket_handler.hpp
simple_visualizer/src/server/: visualizer_server.cpp  visualizer_server.hpp
simple_visualizer/src/utils/: log.hpp
simple_visualizer/www/: index.html
system_monitor/: CMakeLists.txt
system_monitor/src/: main.cpp  monitor.cpp  monitor.hpp
tools/: generate_image.cpp
